fix: dark mode & sm width

--- a/app/src/styles/Home.module.css
+++ b/app/src/styles/Home.module.css
@@ -267,7 +267,8 @@
   }
 
   .center {
-    padding: 2rem;
+    width: 100%;
+    padding: 1rem;
   }
   
   .center section{
